规范化需求文档：添加流程图、架构图和项目管理图表

--- a/需求分析文档.md
+++ b/需求分析文档.md
@@ -1,458 +1,853 @@
 # 刷刷题系统需求分析文档
 
-## 1. 任务概述
+## 1. 项目概述
 
-本项目旨在开发一个智能题库管理与练习系统。该系统的核心目标是利用先进技术，实现对各类题库文档的自动化处理、高效管理和灵活的练习与刷题功能。通过自动化提取、智能分类和多样化的学习模式，本系统将显著提高用户管理题库的效率，并为用户提供个性化的学习体验，帮助用户更好地巩固知识、找出薄弱环节。
+### 1.1 项目背景
+本项目旨在开发一个智能题库管理与练习系统，通过AI技术自动从各种文档中提取题目，建立个人题库，并提供智能练习功能。系统将支持多种文档格式的题目提取，包括Word文档、PDF文件、图片等，通过大模型技术实现题目的智能识别、分类和结构化存储。
+
+### 1.2 项目目标
+- **智能提取**：利用AI技术从文档中自动提取题目和答案
+- **题库管理**：建立个人专属的结构化题库系统
+- **智能练习**：提供个性化的练习体验和学习建议
+- **多格式支持**：支持Word、PDF、图片等多种文档格式
+- **用户友好**：提供简洁直观的用户界面和良好的用户体验
+
+### 1.3 系统架构概览
+
+```mermaid
+graph TB
+    A[用户界面层] --> B[业务逻辑层]
+    B --> C[数据访问层]
+    C --> D[数据存储层]
+    
+    A --> A1[Web前端界面]
+    A --> A2[移动端适配]
+    
+    B --> B1[用户认证模块]
+    B --> B2[文档处理模块]
+    B --> B3[AI提取模块]
+    B --> B4[题库管理模块]
+    B --> B5[练习系统模块]
+    
+    C --> C1[数据库访问]
+    C --> C2[文件存储]
+    C --> C3[缓存管理]
+    
+    D --> D1[MySQL数据库]
+    D --> D2[文件存储系统]
+    D --> D3[Redis缓存]
+    
+    E[外部服务] --> E1[大模型API]
+    E --> E2[OCR服务]
+    
+    B3 --> E1
+    B2 --> E2
+```
 
 ## 2. 数据描述
+
 ### 2.1 静态数据
-题目信息： 题目的文本内容、题型（单选、多选、判断、填空）、选项、正确答案、解析、所属分类ID。
 
-分类信息： 分类名称、创建时间。
+**题目类型定义：**
+- **单选题 (single_choice)**：一个正确答案的选择题
+- **多选题 (multiple_choice)**：多个正确答案的选择题
+- **判断题 (true_false)**：对错判断题
+- **填空题 (fill_blank)**：需要填入答案的题目
+- **问答题 (essay)**：开放性回答题目
 
-用户信息： 用户名、密码（加密存储）、用户身份等。
-
-系统配置： 大模型API密钥、文件存储路径等系统运行所需的基础配置信息。
+**难度等级：**
+- **简单 (1)**：基础概念题
+- **中等 (2)**：应用理解题
+- **困难 (3)**：综合分析题
 
 ### 2.2 动态数据
-文件上传记录： 用户上传的文件名、上传时间、处理状态（进行中、已完成、失败）。
 
-题目练习记录： 用户每次练习的题目ID、作答结果、用时、练习时间、是否加入错题本、是否收藏。
+**用户练习数据：**
+- 答题记录和正确率统计
+- 错题集合和复习进度
+- 学习时间和练习频率
+- 知识点掌握程度评估
 
-用户操作日志： 用户登录、登出、题目增删改查、分类管理等操作记录。
-
-系统健康状态： 后端服务运行状态、数据库连接状态、API调用成功率等监控数据。
+**系统运行数据：**
+- 文档上传和处理状态
+- AI提取结果和准确率
+- 用户行为和使用统计
+- 系统性能和错误日志
 
 ### 2.3 数据库设计
-本系统将采用关系型数据库（MySQL）进行数据存储，以确保数据的一致性、完整性和支持复杂的关联查询。核心数据库表设计如下：
+
+本系统将采用关系型数据库（MySQL）进行数据存储，以确保数据的一致性、完整性和支持复杂的关联查询。
+
+#### 2.3.1 数据库ER图
+
+```mermaid
+erDiagram
+    USERS {
+        int id PK
+        string username
+        string email
+        string password_hash
+        string role
+        boolean is_active
+        datetime created_at
+        datetime updated_at
+    }
+    
+    CATEGORIES {
+        int id PK
+        string name
+        text description
+        int user_id FK
+        boolean is_default
+        datetime created_at
+        datetime updated_at
+    }
+    
+    QUESTIONS {
+        int id PK
+        int category_id FK
+        int user_id FK
+        string type
+        text content
+        json options
+        json answer
+        text explanation
+        int difficulty
+        string source_file
+        json tags
+        boolean is_active
+        datetime created_at
+        datetime updated_at
+    }
+    
+    PRACTICE_RECORDS {
+        int id PK
+        int user_id FK
+        int question_id FK
+        string session_id
+        json user_answer
+        boolean is_correct
+        int duration_seconds
+        string practice_mode
+        datetime practiced_at
+    }
+    
+    WRONG_ANSWERS {
+        int id PK
+        int user_id FK
+        int question_id FK
+        int error_count
+        datetime last_error_at
+        boolean is_mastered
+        datetime added_at
+    }
+    
+    FAVORITES {
+        int id PK
+        int user_id FK
+        int question_id FK
+        text notes
+        datetime added_at
+    }
+    
+    UPLOAD_RECORDS {
+        int id PK
+        int user_id FK
+        string filename
+        string file_path
+        int file_size
+        string file_type
+        string status
+        int extracted_count
+        text error_message
+        datetime uploaded_at
+        datetime processed_at
+    }
+    
+    USERS ||--o{ CATEGORIES : creates
+    USERS ||--o{ QUESTIONS : creates
+    USERS ||--o{ PRACTICE_RECORDS : practices
+    USERS ||--o{ WRONG_ANSWERS : has
+    USERS ||--o{ FAVORITES : collects
+    USERS ||--o{ UPLOAD_RECORDS : uploads
+    
+    CATEGORIES ||--o{ QUESTIONS : contains
+    
+    QUESTIONS ||--o{ PRACTICE_RECORDS : answered_in
+    QUESTIONS ||--o{ WRONG_ANSWERS : wrong_in
+    QUESTIONS ||--o{ FAVORITES : favorited_as
+```
+
+#### 2.3.2 核心数据库表设计
 
 **用户表 (users):**
-- id (Primary Key): 用户唯一标识
-- username (String, Unique): 用户名
-- email (String, Unique): 邮箱地址
-- password_hash (String): 密码的哈希值
-- role (String): 用户角色（admin, user）
-- is_active (Boolean): 账户是否激活
-- created_at (Timestamp): 用户创建时间
-- updated_at (Timestamp): 用户信息更新时间
+- id (主键)
+- username (用户名，唯一)
+- email (邮箱，唯一)
+- password_hash (密码哈希)
+- role (用户角色：admin/user)
+- is_active (账户状态)
+- created_at (创建时间)
+- updated_at (更新时间)
 
 **分类表 (categories):**
-- id (Primary Key): 分类唯一标识
-- name (String): 分类名称
-- description (Text): 分类描述
-- user_id (Foreign Key): 所属用户ID
-- is_default (Boolean): 是否为默认分类
-- created_at (Timestamp): 分类创建时间
-- updated_at (Timestamp): 分类更新时间
+- id (主键)
+- name (分类名称)
+- description (分类描述)
+- user_id (所属用户，外键)
+- is_default (是否为默认分类)
+- created_at (创建时间)
+- updated_at (更新时间)
 
 **题目表 (questions):**
-- id (Primary Key): 题目唯一标识
-- category_id (Foreign Key): 所属分类ID
-- user_id (Foreign Key): 创建用户ID
-- type (Enum): 题型（single_choice, multiple_choice, true_false, fill_blank）
-- content (Text): 题目文本
-- options (JSON): 题目选项（如果适用）
-- answer (JSON): 正确答案
-- explanation (Text): 题目解析
-- difficulty (Integer): 难度等级（1-5）
-- source_file (String): 来源文件名
-- tags (JSON): 题目标签
-- is_active (Boolean): 是否启用
-- created_at (Timestamp): 题目创建时间
-- updated_at (Timestamp): 题目最后更新时间
+- id (主键)
+- category_id (所属分类，外键)
+- user_id (创建用户，外键)
+- type (题目类型)
+- content (题目内容)
+- options (选项，JSON格式)
+- answer (正确答案，JSON格式)
+- explanation (答案解析)
+- difficulty (难度等级：1-3)
+- source_file (来源文件)
+- tags (标签，JSON格式)
+- is_active (是否启用)
+- created_at (创建时间)
+- updated_at (更新时间)
 
 **练习记录表 (practice_records):**
-- id (Primary Key): 记录唯一标识
-- user_id (Foreign Key): 用户ID
-- question_id (Foreign Key): 题目ID
-- session_id (String): 练习会话ID
-- user_answer (JSON): 用户作答
-- is_correct (Boolean): 是否答对
-- duration_seconds (Integer): 作答用时
-- practice_mode (String): 练习模式（practice, review）
-- practiced_at (Timestamp): 练习时间
+- id (主键)
+- user_id (用户ID，外键)
+- question_id (题目ID，外键)
+- session_id (练习会话ID)
+- user_answer (用户答案，JSON格式)
+- is_correct (是否正确)
+- duration_seconds (答题用时，秒)
+- practice_mode (练习模式)
+- practiced_at (练习时间)
 
-**错题本表 (wrong_answers):**
-- id (Primary Key): 记录唯一标识
-- user_id (Foreign Key): 用户ID
-- question_id (Foreign Key): 题目ID
-- error_count (Integer): 错误次数
-- last_error_at (Timestamp): 最后错误时间
-- is_mastered (Boolean): 是否已掌握
-- added_at (Timestamp): 加入错题本时间
+**错题表 (wrong_answers):**
+- id (主键)
+- user_id (用户ID，外键)
+- question_id (题目ID，外键)
+- error_count (错误次数)
+- last_error_at (最后错误时间)
+- is_mastered (是否已掌握)
+- added_at (加入错题集时间)
 
-**收藏夹表 (favorites):**
-- id (Primary Key): 记录唯一标识
-- user_id (Foreign Key): 用户ID
-- question_id (Foreign Key): 题目ID
-- notes (Text): 收藏备注
-- added_at (Timestamp): 加入收藏夹时间
+**收藏表 (favorites):**
+- id (主键)
+- user_id (用户ID，外键)
+- question_id (题目ID，外键)
+- notes (个人笔记)
+- added_at (收藏时间)
 
-**文件上传记录表 (upload_records):**
-- id (Primary Key): 记录唯一标识
-- user_id (Foreign Key): 用户ID
-- filename (String): 原始文件名
-- file_path (String): 存储路径
-- file_size (Integer): 文件大小
-- file_type (String): 文件类型
-- status (Enum): 处理状态（pending, processing, completed, failed）
-- extracted_count (Integer): 提取题目数量
-- error_message (Text): 错误信息
-- uploaded_at (Timestamp): 上传时间
-- processed_at (Timestamp): 处理完成时间
+**上传记录表 (upload_records):**
+- id (主键)
+- user_id (用户ID，外键)
+- filename (原始文件名)
+- file_path (存储路径)
+- file_size (文件大小，字节)
+- file_type (文件类型)
+- status (处理状态：pending/processing/completed/failed)
+- extracted_count (提取题目数量)
+- error_message (错误信息)
+- uploaded_at (上传时间)
+- processed_at (处理完成时间)
 
 ### 2.4 数据采集
-数据采集是系统获取用户及题库信息的基础，主要包括以下要点和流程：
 
-用户数据采集：
+**文档来源：**
+- 用户上传的Word文档 (.docx)
+- 用户上传的PDF文件 (.pdf)
+- 用户上传的图片文件 (.jpg, .png, .gif)
+- 用户上传的纯文本文件 (.txt)
+- 用户手动输入的题目
 
-注册信息： 用户在注册时提供的用户名、密码等基本信息。
-
-偏好数据： 用户在系统中的选择和设置，例如收藏的题目、练习模式设置等。
-
-互动记录： 用户在练习、刷题、修改题目等过程中的行为数据。
-
-题库数据采集：
-
-文件上传： 用户通过系统界面上传Word、图片、PDF等格式的题库文档。后端服务接收文件后，调用文件解析库（如 python-docx、PyPDF2、Pillow）进行预处理，然后将文本或图像数据通过API发送给指定的大模型（例如硅基流动）进行内容提取、题型识别和结构化（转换为JSON格式）。
-
-手动录入： 用户通过前端表单逐条添加题目信息，包括题目文本、题型、选项、答案、解析及所属分类。
-
-数据采集流程：
-
-数据源识别： 明确用户注册表单、用户操作行为、上传的题库文件等作为数据源。
-
-数据采集程序： 后端服务负责文件上传的接收与解析，并调用大模型API进行数据提取。对于手动添加，前端通过API提交数据至后端。
-
-数据清洗与处理： 接收到的数据会进行必要的格式校验、去重和结构化处理，确保数据质量。
-
-数据存储： 经过处理的数据最终存储到关系型数据库中，并建立必要的索引以支持快速检索。
+**数据处理流程：**
+1. **文件上传验证**：检查文件格式、大小限制
+2. **内容提取**：使用相应库提取文档文本内容
+3. **AI智能解析**：调用大模型API识别题目结构
+4. **数据清洗**：格式化和标准化提取结果
+5. **人工校验**：用户确认和修正AI提取结果
+6. **数据存储**：将最终题目保存到数据库
 
 ## 3. 功能需求
-### 3.1 核心功能 (MVP)
-智能题库文档上传与提取：
 
-支持用户上传Word、图片（JPG, PNG等）和PDF格式的题库文档。
+### 3.1 业务流程图
 
-后端调用文件解析库对文档进行预处理。
+#### 3.1.1 整体业务流程
 
-通过API将文本或图像数据发送给指定大模型进行内容提取、题型识别和结构化（转换为JSON格式），支持单选、多选、判断、填空题型。
+```mermaid
+flowchart TD
+    A[用户登录] --> B[选择功能]
+    B --> C{功能类型}
+    
+    C -->|文档处理| D[上传文档]
+    C -->|题库管理| E[管理题目]
+    C -->|开始练习| F[选择练习模式]
+    
+    D --> D1[文档解析]
+    D1 --> D2[AI提取题目]
+    D2 --> D3[人工校验]
+    D3 --> D4[保存到题库]
+    D4 --> E
+    
+    E --> E1[查看题目列表]
+    E1 --> E2{操作类型}
+    E2 -->|编辑| E3[修改题目]
+    E2 -->|删除| E4[删除题目]
+    E2 -->|分类| E5[管理分类]
+    E3 --> E1
+    E4 --> E1
+    E5 --> E1
+    
+    F --> F1[选择题目范围]
+    F1 --> F2[开始答题]
+    F2 --> F3[提交答案]
+    F3 --> F4[查看结果]
+    F4 --> F5{继续练习?}
+    F5 -->|是| F1
+    F5 -->|否| G[结束]
+```
 
-题库管理（分类、增删改查、筛选）：
+#### 3.1.2 文档处理流程
 
-系统根据文件名默认对提取的题目进行分类。
+```mermaid
+sequenceDiagram
+    participant U as 用户
+    participant F as 前端界面
+    participant B as 后端服务
+    participant AI as AI模型
+    participant DB as 数据库
+    
+    U->>F: 上传文档
+    F->>B: 发送文件
+    B->>B: 文件格式检查
+    B->>B: 文档内容提取
+    B->>AI: 发送文本内容
+    AI->>B: 返回提取的题目
+    B->>F: 返回提取结果
+    F->>U: 显示预览界面
+    U->>F: 确认/修改题目
+    F->>B: 提交最终题目
+    B->>DB: 保存题目数据
+    B->>F: 返回保存结果
+    F->>U: 显示成功提示
+```
 
-用户可手动创建、修改、删除新的分类。
+#### 3.1.3 练习系统流程
 
-支持对题目的查看、添加（手动添加）、删除、修改操作。
+```mermaid
+stateDiagram-v2
+    [*] --> 选择练习模式
+    选择练习模式 --> 配置练习参数
+    配置练习参数 --> 加载题目
+    加载题目 --> 显示题目
+    显示题目 --> 用户答题
+    用户答题 --> 检查答案
+    检查答案 --> 记录结果
+    记录结果 --> 判断是否继续
+    判断是否继续 --> 显示题目 : 继续
+    判断是否继续 --> 生成报告 : 结束
+    生成报告 --> [*]
+```
 
-支持对题目进行基于分类的简单查询和筛选。
+### 3.2 核心功能
 
-支持将题目批量或单个移动到指定分类下。
+#### 3.2.1 文档上传与解析
+- **文档上传**：支持拖拽上传、批量上传多种格式文档
+- **格式支持**：Word (.docx)、PDF (.pdf)、图片 (.jpg, .png, .gif)、纯文本 (.txt)
+- **文档预处理**：自动检测文档编码、格式转换、内容提取
+- **进度显示**：实时显示上传和处理进度
 
-题目练习模式：
+#### 3.2.2 智能题目提取
+- **AI识别**：利用大模型识别文档中的题目、选项、答案
+- **题型分类**：自动识别单选题、多选题、判断题、填空题、问答题
+- **结构化处理**：将识别结果转换为结构化数据
+- **质量评估**：对提取结果进行质量评分和置信度评估
+- **人工校验**：提供界面供用户确认和修正提取结果
 
-用户可以选择指定分类的题目进行练习。
+#### 3.2.3 题库管理系统
+- **分类管理**：支持多级分类，可自定义分类体系
+- **题目编辑**：支持题目的增删改查，批量操作
+- **标签系统**：为题目添加标签，支持多维度分类
+- **搜索功能**：支持关键词搜索、高级筛选
+- **导入导出**：支持题库的批量导入导出
 
-支持设置练习时长、题目顺序（顺序、乱序）。
+#### 3.2.4 智能练习系统
+- **练习模式**：顺序练习、随机练习、专项练习、错题练习
+- **难度调节**：根据用户表现自动调整题目难度
+- **计时功能**：支持限时练习和计时统计
+- **答题分析**：详细的答题报告和错误分析
+- **学习建议**：基于练习数据提供个性化学习建议
 
-记录用户作答情况，可选自动将做错的题目加入错题本。
-
-提供收藏题目到指定收藏夹的功能。
-
-题库刷题模式：
-
-用户可以选择指定分类的题目。
-
-系统直接展示题目及其正确答案。
-
-提供"下一题"导航，方便用户快速浏览和复习。
-
-手动添加题目：
-
-允许用户通过结构化表单手动逐个添加新的题目到题库中。
-
-包括输入题目文本、题型、选项、答案、解析、所属分类等信息。
-
-基础用户认证和权限管理：
-
-提供用户注册和登录功能。
-
-通过访问令牌验证用户身份，保护系统API接口。
-
-### 3.2 未来增强功能
+### 3.3 未来增强功能
 更多文件格式支持： 扩展支持Excel、纯文本等更多格式的题库文档上传。
 
-更智能的提取： 提升大模型在复杂数学公式、代码题等特殊题型识别和答案提取上的准确性。
+智能推荐系统： 基于用户的练习历史和错题情况，智能推荐相关题目和学习内容。
 
-多人协作： 支持多用户协作管理题库，包括权限控制和版本管理。
+多用户协作： 支持团队共享题库，协作编辑和管理题目。
 
-练习数据分析： 提供详细的练习数据统计和分析报告（如正确率趋势、知识点掌握情况、薄弱环节分析）。
+数据分析与报告： 提供详细的学习数据分析，生成个性化的学习报告和建议。
 
-移动端应用： 开发iOS/Android原生或混合式移动端应用。
-
-多维度管理与练习： 支持根据难度、知识点标签等更多维度进行题目管理和练习。
-
-自适应练习： 根据用户历史表现动态调整题目难度和类型，提供个性化的学习路径。
+移动端应用： 开发移动端应用，支持随时随地的学习和练习。
 
 ## 4. 性能需求
-文件处理响应时间： 用户上传题库文档后，文件解析和题目提取应在合理时间内完成。对于中小型文档（例如，10MB以下），应在秒级响应；对于大型文档，应提供进度反馈并在可接受的时间范围内完成（例如，小于60秒）。
 
-题目提取准确率： 系统应确保高准确率的题目内容和题型识别（例如，提取准确率达到90%以上），并提供便捷的纠错机制。
+### 4.1 响应时间要求
+- **页面加载时间**：首页加载时间 < 2秒
+- **文档上传响应**：文件上传开始响应 < 1秒
+- **AI提取处理**：单个文档处理时间 < 30秒
+- **题目搜索查询**：搜索结果返回 < 1秒
+- **练习答题响应**：答题提交响应 < 0.5秒
 
-页面加载速度： 前端页面应在2秒内完成加载，关键交互（如切换分类、开始练习）响应时间应在500毫秒内。
+### 4.2 并发性能
+- **同时在线用户**：支持100个并发用户
+- **文件上传并发**：支持10个文件同时上传处理
+- **数据库连接**：最大50个并发数据库连接
+- **API请求处理**：每秒处理200个API请求
 
-并发处理能力： 系统应能支持至少50个并发用户同时进行文件上传、题目练习和刷题操作，并保持系统稳定性和响应速度。
+### 4.3 存储容量
+- **用户数据存储**：支持10,000个用户账户
+- **题目数据存储**：支持100万道题目存储
+- **文件存储空间**：支持100GB文件存储
+- **数据库大小**：支持10GB数据库容量
 
-数据存储与检索： 数据库查询（如题目列表、分类筛选）应在毫秒级响应，即使在大量数据（例如，10万+题目）情况下也能保持高效。
-
-系统稳定性： 系统应保证7x24小时稳定运行，年故障时间（Downtime）低于0.1%（即99.9%的可用性），并具备健壮的异常处理和故障恢复机制。
-
-可扩展性： 系统架构应具备良好的扩展性，能够根据用户量和数据量的增长，通过水平扩展或增加模块来满足需求。
-
-数据安全性： 用户上传的文件和提取的题目内容应得到严格保护，敏感数据（如用户密码）应加密存储。系统应定期进行数据备份，确保数据安全和隐私保护。
+### 4.4 可用性要求
+- **系统可用性**：99.5%的系统正常运行时间
+- **数据备份**：每日自动数据备份
+- **故障恢复**：系统故障后1小时内恢复
+- **数据一致性**：确保数据的完整性和一致性
 
 ## 5. 运行需求
-### 5.1 用户界面 (UI)
-简洁直观： 界面布局合理，功能模块划分明确，用户能够一目了然，轻松找到所需功能。避免复杂元素堆砌。
 
-易用性与导航： 提供直观的导航菜单或按钮，帮助用户快速定位功能。界面元素和交互方式保持一致性，降低学习成本。
+### 5.1 用户界面
 
-个性化设置： 未来可提供用户自定义界面布局、字体大小、颜色主题等选项。
+#### 5.1.1 设计原则
+- **简洁直观**：界面布局清晰，操作流程简单
+- **响应式设计**：适配桌面端、平板和移动端
+- **一致性**：统一的设计风格和交互模式
+- **可访问性**：支持键盘导航和屏幕阅读器
 
-信息展示： 文本内容清晰易读，图片和图表清晰展示，信息呈现直观明了。
+#### 5.1.2 主要界面
+- **登录注册页面**：用户身份验证界面
+- **主控制台**：系统功能导航和概览
+- **文档上传页面**：文件上传和处理状态
+- **题目管理页面**：题库浏览、编辑和管理
+- **练习界面**：答题和练习功能
+- **统计分析页面**：学习数据和进度展示
 
-交互反馈： 用户操作时提供及时反馈（例如，加载状态、成功/失败提示），确保用户了解系统响应。
-
-跨平台兼容性： 界面采用响应式设计，能够自适应不同设备（桌面、平板、手机）和屏幕尺寸，提供一致的用户体验。
+#### 5.1.3 交互设计
+- **拖拽上传**：支持文件拖拽到指定区域上传
+- **实时反馈**：操作结果的即时提示和状态更新
+- **快捷键支持**：常用功能的键盘快捷键
+- **批量操作**：支持题目的批量选择和操作
 
 ### 5.2 接口需求
-**用户认证接口：**
-- `POST /api/auth/register` - 注册新用户
-- `POST /api/auth/login` - 用户登录并获取访问令牌
-- `POST /api/auth/logout` - 用户登出
-- `GET /api/auth/me` - 获取当前用户信息
-- `PUT /api/auth/profile` - 修改用户个人信息
-- `POST /api/auth/change-password` - 修改密码
 
-**文件上传与处理接口：**
-- `POST /api/files/upload` - 上传题库文件
-- `GET /api/files/upload-status/{upload_id}` - 查询文件处理状态
-- `GET /api/files/uploads` - 获取用户上传记录列表
+#### 5.2.1 RESTful API设计
+- **用户认证接口**：注册、登录、令牌刷新
+- **分类管理接口**：分类的增删改查操作
+- **题目管理接口**：题目的CRUD操作和搜索
+- **文件处理接口**：文件上传、解析和状态查询
+- **练习功能接口**：练习会话管理和答题记录
+- **统计分析接口**：用户数据统计和报告生成
 
-**题目管理接口：**
-- `POST /api/questions` - 手动添加新题目
-- `GET /api/questions` - 获取题目列表（支持分页、筛选、搜索）
-- `GET /api/questions/{question_id}` - 获取题目详情
-- `PUT /api/questions/{question_id}` - 修改题目
-- `DELETE /api/questions/{question_id}` - 删除题目
-- `POST /api/questions/batch-move` - 批量移动题目到指定分类
-- `POST /api/questions/batch-delete` - 批量删除题目
+#### 5.2.2 第三方集成
+- **大模型API**：智谱AI、OpenAI等AI服务集成
+- **文件存储服务**：云存储服务集成（可选）
+- **邮件服务**：用户通知和密码重置邮件
+- **监控服务**：系统性能和错误监控
 
-**分类管理接口：**
-- `POST /api/categories` - 创建新分类
-- `GET /api/categories` - 获取分类列表
-- `GET /api/categories/{category_id}` - 获取分类详情
-- `PUT /api/categories/{category_id}` - 修改分类
-- `DELETE /api/categories/{category_id}` - 删除分类
+#### 5.2.3 数据格式
+- **请求格式**：JSON格式的API请求和响应
+- **文件格式**：支持的文档格式和编码
+- **数据导出**：JSON、CSV格式的数据导出
+- **API文档**：完整的API接口文档和示例
 
-**练习与刷题接口：**
-- `POST /api/practice/sessions` - 开始练习会话
-- `GET /api/practice/sessions/{session_id}/questions` - 获取练习题目
-- `POST /api/practice/sessions/{session_id}/answers` - 提交答案
-- `GET /api/practice/sessions/{session_id}/results` - 获取练习结果
-- `GET /api/study/questions` - 获取刷题模式题目列表
-- `POST /api/favorites` - 添加收藏
-- `DELETE /api/favorites/{question_id}` - 取消收藏
-- `GET /api/favorites` - 获取收藏列表
-- `GET /api/wrong-answers` - 获取错题本
-- `DELETE /api/wrong-answers/{question_id}` - 从错题本移除
+## 6. 其他需求
 
-**第三方服务接口：**
-- 大模型API接口：调用第三方大模型服务（如硅基流动、OpenAI）进行文档内容提取、题型识别和结构化
-- 文件存储服务接口：与云存储服务（如阿里云OSS、腾讯云COS）交互，存储用户上传的原始文档
-- 邮件服务接口：用于发送注册验证、密码重置等邮件
-
-**系统管理接口：**
-- `GET /api/admin/stats` - 获取系统统计信息
-- `GET /api/admin/users` - 管理用户列表
-- `GET /api/admin/logs` - 获取系统日志
-- `POST /api/feedback` - 用户反馈提交
-
-## 6. 其它需求
 ### 6.1 系统稳定性
-高可靠性： 系统应保证长时间稳定运行，避免频繁的系统崩溃或故障。
-
-容错能力： 能够处理异常情况并提供友好的错误提示，避免用户操作中断或数据丢失。
-
-监控与告警： 建立完善的监控系统和告警机制，及时发现和处理潜在问题。
-
-版本控制： 采用版本管理工具，严格管理代码变更，确保系统代码的稳定性和一致性。
+- **错误处理**：完善的异常捕获和错误提示机制
+- **数据验证**：输入数据的格式和有效性验证
+- **事务管理**：数据库操作的事务一致性保证
+- **日志记录**：详细的系统操作和错误日志
 
 ### 6.2 可维护性
-模块化架构： 系统采用模块化设计，将功能拆分成独立的模块，便于维护和更新。
-
-代码质量： 编写清晰、简洁、规范的代码，提供详细注释，提高代码可读性。
-
-技术文档： 建立详细的技术文档，为后续的维护和升级提供支持。
-
-技术更新： 定期评估和更新系统所使用的技术和组件，确保系统与时俱进。
+- **代码规范**：统一的编码标准和注释规范
+- **模块化设计**：清晰的模块划分和接口定义
+- **版本控制**：Git版本管理和分支策略
+- **文档完整**：技术文档、API文档和用户手册
 
 ### 6.3 安全性
-用户身份验证与权限控制： 确保用户数据和系统的安全，防止未经授权的访问。
+- **身份认证**：JWT令牌认证和会话管理
+- **数据加密**：敏感数据的加密存储和传输
+- **访问控制**：基于角色的权限管理
+- **安全防护**：SQL注入、XSS攻击等安全防护
 
-数据加密： 对用户上传的文件和提取的文字内容进行加密处理，保护用户隐私和数据安全。
-
-数据备份与恢复： 定期进行数据备份，确保数据不丢失，并具备快速恢复能力。
-
-安全审计： 记录关键操作，进行安全审计，及时发现并应对潜在的安全威胁。
+### 6.4 扩展性
+- **水平扩展**：支持多服务器部署和负载均衡
+- **功能扩展**：模块化架构支持新功能添加
+- **数据库扩展**：支持数据库分库分表
+- **API扩展**：RESTful API支持版本管理
 
 ## 7. 开发路线与技术方案概述
-### 7.1 开发路线 (MVP)
-**第一阶段：基础架构与核心功能**
-1. 搭建项目基础架构（前后端分离）
-2. 实现用户认证系统（注册、登录、权限管理）
-3. 设计并实现数据库结构
-4. 实现基本的题目和分类管理功能
-5. 开发文件上传功能
 
-**第二阶段：智能提取与练习功能**
-1. 集成大模型API，实现文档智能提取
-2. 支持Word、PDF、图片格式的题目提取
-3. 实现练习模式（顺序/乱序、计时、错题记录）
-4. 实现刷题模式（快速浏览、答案展示）
-5. 开发收藏和错题本功能
+### 7.1 技术架构图
 
-**第三阶段：优化与增强**
-1. 优化用户界面和交互体验
-2. 添加数据统计和分析功能
-3. 实现批量操作和高级筛选
-4. 性能优化和安全加固
-5. 部署和运维配置
+#### 7.1.1 系统整体架构
 
-### 7.2 后端技术方案
+```mermaid
+graph TB
+    subgraph "客户端层"
+        A1[Web浏览器]
+        A2[移动端浏览器]
+    end
+    
+    subgraph "前端层"
+        B1[Vue 3 + TypeScript]
+        B2[Vite构建工具]
+        B3[Vue Router路由]
+        B4[Pinia状态管理]
+        B5[Element Plus UI]
+    end
+    
+    subgraph "网关层"
+        C1[Nginx反向代理]
+        C2[SSL证书]
+        C3[负载均衡]
+    end
+    
+    subgraph "后端服务层"
+        D1[Flask Web框架]
+        D2[SQLAlchemy ORM]
+        D3[JWT认证]
+        D4[文件处理服务]
+        D5[AI集成服务]
+    end
+    
+    subgraph "数据层"
+        E1[MySQL数据库]
+        E2[Redis缓存]
+        E3[文件存储系统]
+    end
+    
+    subgraph "外部服务"
+        F1[大模型API]
+        F2[OCR服务]
+        F3[对象存储OSS]
+    end
+    
+    A1 --> B1
+    A2 --> B1
+    B1 --> C1
+    C1 --> D1
+    D1 --> E1
+    D1 --> E2
+    D4 --> E3
+    D5 --> F1
+    D4 --> F2
+    E3 --> F3
+```
+
+#### 7.1.2 部署架构图
+
+```mermaid
+graph TB
+    subgraph "用户端"
+        U1[PC用户]
+        U2[移动用户]
+    end
+    
+    subgraph "CDN层"
+        CDN[内容分发网络]
+    end
+    
+    subgraph "负载均衡层"
+        LB[负载均衡器]
+    end
+    
+    subgraph "Web服务器集群"
+        WS1[Web服务器1]
+        WS2[Web服务器2]
+    end
+    
+    subgraph "应用服务器集群"
+        AS1[应用服务器1]
+        AS2[应用服务器2]
+    end
+    
+    subgraph "数据库集群"
+        DB1[主数据库]
+        DB2[从数据库]
+    end
+    
+    subgraph "缓存集群"
+        R1[Redis主节点]
+        R2[Redis从节点]
+    end
+    
+    subgraph "文件存储"
+        FS[分布式文件系统]
+    end
+    
+    subgraph "监控系统"
+        M1[应用监控]
+        M2[系统监控]
+        M3[日志收集]
+    end
+    
+    U1 --> CDN
+    U2 --> CDN
+    CDN --> LB
+    LB --> WS1
+    LB --> WS2
+    WS1 --> AS1
+    WS2 --> AS2
+    AS1 --> DB1
+    AS2 --> DB1
+    DB1 --> DB2
+    AS1 --> R1
+    AS2 --> R1
+    R1 --> R2
+    AS1 --> FS
+    AS2 --> FS
+    
+    AS1 --> M1
+    AS2 --> M1
+    WS1 --> M2
+    WS2 --> M2
+    DB1 --> M3
+    DB2 --> M3
+```
+
+### 7.2 开发路线
+
+#### 第一阶段：基础架构搭建（第1-2周）
+- 环境配置和项目初始化
+- 数据库设计和创建
+- 基础API框架搭建
+- 前端基础页面框架
+
+#### 第二阶段：核心功能开发（第3-5周）
+- 用户认证系统
+- 文档上传和解析功能
+- AI题目提取集成
+- 题库管理功能
+
+#### 第三阶段：练习系统开发（第6-7周）
+- 练习模式实现
+- 答题界面开发
+- 结果统计和分析
+- 错题管理功能
+
+#### 第四阶段：优化和部署（第8周）
+- 性能优化
+- 用户体验改进
+- 系统测试
+- 部署上线
+
+### 7.3 后端技术方案
 **技术栈选择：**
 - **开发语言：** Python 3.9+
-- **Web框架：** Flask（轻量级、灵活）
-- **数据库：** MySQL（主数据库）+ Redis（缓存）
-- **ORM：** SQLAlchemy + Flask-Migrate（数据库迁移）
-- **认证：** JWT Token + bcrypt（密码加密）
-- **文件处理：** python-docx, PyPDF2, Pillow
-- **任务队列：** Celery + Redis（异步文件处理）
-- **API文档：** Flask-RESTX（Swagger文档生成）
+- **Web框架：** Flask 2.3+
+- **数据库ORM：** SQLAlchemy 2.0+
+- **数据库：** SQLite（开发）/ MySQL（生产）
+- **认证系统：** JWT (PyJWT)
+- **文档处理：** python-docx, PyPDF2, Pillow
+- **AI集成：** 智谱AI GLM-4, OpenAI API
+- **任务队列：** Celery + Redis（可选）
 
 **架构设计：**
-- 采用分层架构：Controller -> Service -> Repository -> Model
-- 使用依赖注入模式，便于测试和维护
-- 异步处理文件上传和大模型调用
+- 采用MVC架构模式，分离业务逻辑和数据访问
+- RESTful API设计，支持前后端分离
+- 模块化设计，便于功能扩展和维护
+- 统一的错误处理和响应格式
+- 完善的日志记录和监控机制
 - 实现统一的错误处理和日志记录
 
-### 7.3 前端技术方案
+### 7.4 前端技术方案
 **技术栈选择：**
-- **前端框架：** Vue 3 + TypeScript
-- **构建工具：** Vite（快速开发和构建）
-- **状态管理：** Pinia（Vue官方推荐状态管理）
-- **数据获取：** Axios + Vue Query（服务器状态管理）
-- **UI组件库：** Element Plus（Vue生态成熟组件库）
-- **样式方案：** SCSS + CSS Modules
-- **路由：** Vue Router v4
-- **表单处理：** VeeValidate + Yup（表单验证）
-- **图标：** Element Plus Icons
+- **当前实现：** 原生HTML + CSS + JavaScript
+- **计划升级：** Vue 3 + TypeScript + Vite
+- **UI框架：** Bootstrap 5（当前）/ Element Plus（计划）
+- **状态管理：** Pinia（计划）
+- **路由管理：** Vue Router 4（计划）
+- **HTTP客户端：** Axios
+- **构建工具：** Vite（计划）
 
-**项目结构：**
+**当前实现状态：**
 ```
-src/
-├── components/     # 通用组件
-├── views/         # 页面组件
-├── composables/   # 组合式函数
-├── services/      # API服务
-├── stores/        # 状态管理
-├── types/         # TypeScript类型定义
-├── utils/         # 工具函数
-└── styles/        # 样式文件
+前端/
+├── index.html          # 主页面
+├── styles/
+│   └── main.css       # 样式文件
+└── js/
+    ├── main.js        # 主控制器
+    ├── auth.js        # 认证管理
+    ├── categories.js  # 分类管理
+    ├── questions.js   # 题目管理
+    ├── practice.js    # 练习功能
+    └── upload.js      # 文件上传
 ```
 
-### 7.4 部署与运维方案
+**升级计划：**
+```
+前端/
+├── src/
+│   ├── components/    # Vue组件
+│   ├── views/         # 页面视图
+│   ├── router/        # 路由配置
+│   ├── stores/        # Pinia状态管理
+│   ├── utils/         # 工具函数
+│   └── types/         # TypeScript类型定义
+├── public/            # 静态资源
+└── package.json       # 依赖配置
+```
+
+### 7.5 部署与运维方案
 **部署方案：**
 - **生产部署：** 云服务器 + Nginx + Gunicorn
-- **数据库：** MySQL（可使用云数据库服务）
-- **缓存：** Redis
-- **文件存储：** 本地存储或云对象存储
-- **反向代理：** Nginx（负载均衡、SSL终止）
+- **开发部署：** 本地开发服务器
+- **数据库：** MySQL 8.0+（生产）/ SQLite（开发）
+- **缓存：** Redis 6.0+（可选）
+- **文件存储：** 本地存储 / 云存储OSS（可选）
 
-**CI/CD流程：**
-- **版本控制：** Git + GitHub
-- **自动化测试：** pytest（后端）+ Vitest（前端）
-- **自动化部署：** GitHub Actions
-- **代码质量：** ESLint, Prettier, Black, isort
-
-**监控与日志：**
-- **应用监控：** 自定义健康检查接口
-- **日志管理：** Python logging + 日志轮转
-- **性能监控：** 数据库查询优化、API响应时间监控
+**运维监控：**
+- **应用监控：** 日志记录和错误追踪
+- **性能监控：** 响应时间和资源使用监控
+- **数据备份：** 定期数据库备份和恢复测试
+- **安全防护：** HTTPS、防火墙、访问控制
 - **错误追踪：** 统一异常处理和错误日志
 
-## 8. 附录
-### 8.1 技术调研
-**市场调研：**
-- 分析了现有题库管理系统（如Anki、Quizlet等）的功能特点和用户体验
-- 研究了在线教育平台的题目管理和练习模式设计
-- 调研了文档解析和AI提取技术的应用案例
+## 8. 项目管理与风险控制
 
-**技术可行性：**
-- **大模型集成：** 验证了主流大模型API（GPT、Claude、国产大模型）的文档解析能力
-- **文件处理：** 测试了Python生态中各种文档解析库的效果和性能
-- **数据库选型：** 对比了MySQL在性能、稳定性和生态支持方面的优势
-- **前端技术：** 评估了Vue生态的成熟度和开发效率
+### 8.1 项目里程碑甘特图
 
-### 8.2 开发规范
-**代码规范：**
-- **Python：** 遵循PEP 8规范，使用Black格式化，isort排序导入
-- **Vue/TypeScript：** 使用ESLint + Prettier，严格类型检查
-- **Git：** 使用Conventional Commits规范提交信息
-- **文档：** 代码注释、API文档、README文档完整
+```mermaid
+gantt
+    title 刷刷题系统开发计划
+    dateFormat  YYYY-MM-DD
+    section 第一阶段
+    需求分析           :done, req, 2025-01-01, 2025-01-07
+    技术选型           :done, tech, 2025-01-01, 2025-01-07
+    架构设计           :done, arch, 2025-01-05, 2025-01-14
+    
+    section 第二阶段
+    环境搭建           :done, env, 2025-01-08, 2025-01-14
+    数据库设计         :done, db, 2025-01-10, 2025-01-17
+    基础框架           :done, frame, 2025-01-15, 2025-01-21
+    
+    section 第三阶段
+    用户认证系统       :done, auth, 2025-01-18, 2025-01-28
+    分类管理功能       :done, category, 2025-01-22, 2025-02-04
+    题目管理功能       :done, question, 2025-01-25, 2025-02-07
+    
+    section 第四阶段
+    文件上传功能       :done, upload, 2025-01-29, 2025-02-11
+    AI题目提取         :done, ai, 2025-02-01, 2025-02-14
+    练习系统开发       :done, practice, 2025-02-05, 2025-02-18
+    
+    section 第五阶段
+    界面优化           :active, ui, 2025-02-12, 2025-02-25
+    性能优化           :perf, 2025-02-19, 2025-03-04
+    系统测试           :test, 2025-02-26, 2025-03-07
+    
+    section 第六阶段
+    部署准备           :deploy, 2025-03-01, 2025-03-11
+    上线发布           :release, 2025-03-08, 2025-03-14
+    运维监控           :monitor, 2025-03-12, 2025-03-21
+```
 
-**数据库规范：**
-- 表名使用小写下划线命名
-- 字段名使用小写下划线命名
-- 必须有created_at和updated_at字段
-- 外键约束和索引优化
-- 数据迁移脚本版本管理
+### 8.2 风险评估矩阵
 
-**API设计规范：**
-- RESTful API设计原则
-- 统一的响应格式和错误码
-- API版本管理（/api/v1/）
-- 请求参数验证和响应数据序列化
-- 完整的API文档和示例
+```mermaid
+quadrantChart
+    title 项目风险评估矩阵
+    x-axis 低影响 --> 高影响
+    y-axis 低概率 --> 高概率
+    quadrant-1 高概率低影响
+    quadrant-2 高概率高影响
+    quadrant-3 低概率低影响
+    quadrant-4 低概率高影响
+    
+    AI模型不稳定: [0.8, 0.7]
+    文档解析失败: [0.6, 0.6]
+    性能瓶颈: [0.7, 0.4]
+    安全漏洞: [0.9, 0.3]
+    用户体验差: [0.5, 0.8]
+    部署问题: [0.6, 0.5]
+    数据丢失: [0.9, 0.2]
+    第三方服务中断: [0.8, 0.4]
+```
 
-**安全规范：**
-- JWT Token认证，设置合理过期时间
-- 密码使用bcrypt加密存储
-- 输入数据验证和SQL注入防护
-- CORS配置和HTTPS强制
-- 敏感信息环境变量管理
+### 8.3 技术债务管理
 
-### 8.3 项目里程碑
+```mermaid
+pie title 技术债务分布
+    "代码质量" : 35
+    "文档缺失" : 25
+    "测试覆盖" : 20
+    "性能优化" : 15
+    "安全加固" : 5
+```
 
-**里程碑1（第1-2周）：** 项目初始化和基础架构
-- 项目结构搭建
-- 数据库设计和初始化
-- 用户认证系统
-- 基础API框架
+## 9. 附录
 
-**里程碑2（第3-4周）：** 核心功能开发
-- 题目和分类管理
-- 文件上传功能
-- 基础前端界面
+### 9.1 技术调研
 
-**里程碑3（第5-6周）：** 智能提取和练习功能
-- 大模型API集成
-- 文档解析和题目提取
-- 练习和刷题模式
+#### 9.1.1 大模型选择对比
 
-**里程碑4（第7-8周）：** 完善和优化
-- 错题本和收藏功能
-- 用户体验优化
-- 性能优化和测试
-- 部署和上线
+| 模型 | 优势 | 劣势 | 适用场景 |
+|------|------|------|----------|
+| GPT-4 | 理解能力强，准确率高 | 成本较高，API限制 | 高质量题目提取 |
+| Claude | 安全性好，逻辑清晰 | 访问限制，成本高 | 复杂题目分析 |
+| 文心一言 | 中文支持好，成本适中 | 技术相对较新 | 中文题目处理 |
+| 智谱GLM | 开源友好，成本低 | 性能相对较弱 | 预算有限场景 |
+
+#### 9.1.2 文档解析技术对比
+
+| 技术方案 | 支持格式 | 准确率 | 开发难度 |
+|----------|----------|--------|----------|
+| python-docx | Word文档 | 高 | 低 |
+| PyPDF2 | PDF文档 | 中 | 中 |
+| OCR + AI | 图片、扫描件 | 中 | 高 |
+| 综合方案 | 多格式 | 高 | 中 |
+
+### 9.2 开发规范
+
+#### 9.2.1 代码规范
+- **Python代码**：遵循PEP 8规范
+- **JavaScript代码**：遵循ESLint标准
+- **API设计**：遵循RESTful设计原则
+- **数据库命名**：使用下划线命名法
+
+#### 9.2.2 Git工作流
+- **主分支**：main（生产环境）
+- **开发分支**：develop（开发环境）
+- **功能分支**：feature/功能名称
+- **修复分支**：hotfix/问题描述
+
+#### 9.2.3 测试规范
+- **单元测试**：覆盖率不低于80%
+- **集成测试**：核心功能必须测试
+- **性能测试**：关键接口响应时间<2s
+- **安全测试**：SQL注入、XSS等安全检查
+
+### 9.3 项目里程碑
+
+| 里程碑 | 时间节点 | 关键交付物 | 验收标准 |
+|--------|----------|------------|----------|
+| M1: 架构搭建 | 第2周末 | 基础框架 | 前后端通信正常 |
+| M2: 核心功能 | 第5周末 | MVP版本 | 基础功能可用 |
+| M3: AI集成 | 第6周末 | 智能提取 | AI提取准确率>80% |
+| M4: 系统完善 | 第7周末 | 完整系统 | 所有功能正常 |
+| M5: 上线部署 | 第8周末 | 生产系统 | 系统稳定运行 |
+
+---
+
+**文档版本：** v2.0  
+**创建时间：** 2025年1月  
+**最后更新：** 2025年1月（规范化更新）  
+**文档状态：** 已完成并规范化  
